Change submodule urls for fetch and es6promise

--- a/.gitmodules
+++ b/.gitmodules
@@ -84,10 +84,10 @@
 	url = git@github.com:aparshin/WWFAlert.git
 [submodule "leaflet/plugins/fetch"]
 	path = leaflet/plugins/fetch
-	url = git@github.com:github/fetch.git
+	url = git@github.com:ScanEx/fetch.git
 [submodule "leaflet/plugins/es6-promise"]
 	path = leaflet/plugins/es6-promise
-	url = git@github.com:stefanpenner/es6-promise.git
+	url = git@github.com:ScanEx/es6-promise.git
 [submodule "src/CalendarWidget"]
 	path = src/CalendarWidget
 	url = git@github.com:ScanEx/CalendarWidget.git
