--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ common_components/temp
 common_components/dist
 /Testing/cairo-dll
 common_components/primary.js
+src/primary.js
 css/primary.css
 /JSBuildTools/node_modules
 /JSBuildTools/temp
