--- a/plugins/AIS/HardNavigation/package.json
+++ b/plugins/AIS/HardNavigation/package.json
@@ -7,6 +7,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-template-literals": "^7.8.3",
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
